--- a/app/index/view/login.html
+++ b/app/index/view/login.html
@@ -10,46 +10,46 @@
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
 
-		<link rel="stylesheet" href="AmazeUI-2.4.2/assets/css/amazeui.css" />
-		<link href="css/dlstyle.css" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="__AMAZEUI_CSS__/amazeui.css" />
+		<link href="__CSS__/dlstyle.css" rel="stylesheet" type="text/css">
+		<script type="text/javascript" src="__JS__/jquery.js"></script>
 	</head>
 
 	<body>
 
 		<div class="login-boxtitle">
-			<a href="home.html"><img alt="logo" src="images/logobig.png" /></a>
+			<a href="home.html"><img alt="logo" src="__IMAGES__/logobig.png" /></a>
 		</div>
 
 		<div class="login-banner">
 			<div class="login-main">
-				<div class="login-banner-bg"><span></span><img src="images/big.jpg" /></div>
+				<div class="login-banner-bg"><span></span><img src="__IMAGES__/big.jpg" /></div>
 				<div class="login-box">
 
 							<h3 class="title">登录商城</h3>
 
-							<div class="clear"></div>
-						
+							<div class="clear"></div>						
 						<div class="login-form">
 						  <form>
 							   <div class="user-name">
 								    <label for="user"><i class="am-icon-user"></i></label>
-								    <input type="text" name="" id="user" placeholder="邮箱/手机/用户名">
-                 </div>
-                 <div class="user-pass">
-								    <label for="password"><i class="am-icon-lock"></i></label>
-								    <input type="password" name="" id="password" placeholder="请输入密码">
-                 </div>
-              </form>
-           </div>
-            
-            <div class="login-links">
-                <label for="remember-me"><input id="remember-me" type="checkbox">记住密码</label>
-								<a href="#" class="am-fr">忘记密码</a>
-								<a href="register.html" class="zcnext am-fr am-btn-default">注册</a>
-								<br />
-            </div>
+								    <input type="text" name="user" id="user" placeholder="邮箱/手机/用户名">
+			                 </div>
+			                 <div class="user-pass">
+											    <label for="password"><i class="am-icon-lock"></i></label>
+											    <input type="password" name="password" id="password" placeholder="请输入密码">
+			                 </div>
+			              </form>
+			           </div>
+			            <div class="login-links">
+			                <label for="remember-me"><input id="remember-me" type="checkbox">记住密码</label>
+											<a href="#" class="am-fr">忘记密码</a>
+											<a href="register.html" class="zcnext am-fr am-btn-default">注册</a>
+											<br />
+			            </div>
+			             <span id="log_show"></span>
 								<div class="am-cf">
-									<input type="submit" name="" value="登 录" class="am-btn am-btn-primary am-btn-sm">
+									<input type="submit" name="" id="login" value="登 录" class="am-btn am-btn-primary am-btn-sm">
 								</div>
 						<div class="partner">		
 								<h3>合作账号</h3>
@@ -88,5 +88,32 @@
 						</div>
 					</div>
 	</body>
-
+	{:url('dologin')}
 </html>
+<script type="text/javascript">
+	
+	$('#login').click(function(){
+		var name = $('input[name=user]').val();
+		var password = $('input[name=password]').val();
+
+		if ($('input[id=remember-me]').prop('checked')) {
+			$.post("{:url('remember')}",{name:name,password:password});
+			
+		} else {
+			$.post("{:url('unremember')}",{name:name,password:password});
+		}
+		
+		$.post("{:url('dologin')}",{name:name,password:password},function (data) {
+			 if (data == 1) {
+			 	$('#log_show').html(' &nbsp ' + ' &nbsp ' + ' * ' + ' &nbsp ' +'用户名不存在').css('color','red');
+			 } else if(data == 2){	
+			 	$('#log_show').html(' &nbsp ' + ' &nbsp ' + ' * ' + ' &nbsp ' +'密码错误').css('color','red');
+			 } else {
+			 	$(location).attr('href','{:url("Index/index")}');
+			 }
+			
+		});
+		
+	});
+	
+</script>
