--- a/app/index/view/information.html
+++ b/app/index/view/information.html
@@ -7,13 +7,13 @@
 
 		<title>个人资料</title>
 
-		<link href="AmazeUI-2.4.2/assets/css/admin.css" rel="stylesheet" type="text/css">
-		<link href="AmazeUI-2.4.2/assets/css/amazeui.css" rel="stylesheet" type="text/css">
+		<link href="__AMAZEUI_CSS__/admin.css" rel="stylesheet" type="text/css">
+		<link href="__AMAZEUI_CSS__/amazeui.css" rel="stylesheet" type="text/css">
 
-		<link href="css/personal.css" rel="stylesheet" type="text/css">
-		<link href="css/infstyle.css" rel="stylesheet" type="text/css">
-		<script src="AmazeUI-2.4.2/assets/js/jquery.min.js" type="text/javascript"></script>
-		<script src="AmazeUI-2.4.2/assets/js/amazeui.js" type="text/javascript"></script>
+		<link href="__CSS__/personal.css" rel="stylesheet" type="text/css">
+		<link href="__CSS__/infstyle.css" rel="stylesheet" type="text/css">
+		<script src="__AMAZEUI_JS__/jquery.min.js" type="text/javascript"></script>
+		<script src="__AMAZEUI_JS__/amazeui.js" type="text/javascript"></script>
 			
 	</head>
 
@@ -51,7 +51,7 @@
 
 						<div class="nav white">
 							<div class="logoBig">
-								<li><img src="images/logobig.png" /></li>
+								<li><img src="__IMAGES__/logobig.png" /></li>
 							</div>
 
 							<div class="search-bar pr">
@@ -101,16 +101,16 @@
 
 							<div class="filePic">
 								<input type="file" class="inputPic" allowexts="gif,jpeg,jpg,png,bmp" accept="image/*">
-								<img class="am-circle am-img-thumbnail" src="images/getAvatar.do.jpg" alt="" />
+								<img class="am-circle am-img-thumbnail" src="__IMAGES__/{$pic}" alt="" />
 							</div>
 
 							<p class="am-form-help">头像</p>
 
 							<div class="info-m">
-								<div><b>用户名：<i>小叮当</i></b></div>
+								<div><b>用户名：<i>{$username}</i></b></div>
 								<div class="u-level">
 									<span class="rank r2">
-							             <s class="vip1"></s><a class="classes" href="#">铜牌会员</a>
+							             <s class="vip1"></s><a class="classes" href="#">{$gold}</a>
 						            </span>
 								</div>
 								<div class="u-safety">
@@ -124,12 +124,12 @@
 
 						<!--个人信息 -->
 						<div class="info-main">
-							<form class="am-form am-form-horizontal">
+							<form class="am-form am-form-horizontal" action="change" method="post">
 
 								<div class="am-form-group">
-									<label for="user-name2" class="am-form-label">昵称</label>
+									<label for="user-name2" class="am-form-label">用户名</label>
 									<div class="am-form-content">
-										<input type="text" id="user-name2" placeholder="nickname">
+										<input type="text" id="user-name2" placeholder="{$username}">
 
 									</div>
 								</div>
