--- a/app/index/view/register.html
+++ b/app/index/view/register.html
@@ -9,23 +9,21 @@
 		<meta name="format-detection" content="telephone=no">
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
-
-		<link rel="stylesheet" href="AmazeUI-2.4.2/assets/css/amazeui.min.css" />
-		<link href="css/dlstyle.css" rel="stylesheet" type="text/css">
-		<script src="AmazeUI-2.4.2/assets/js/jquery.min.js"></script>
-		<script src="AmazeUI-2.4.2/assets/js/amazeui.min.js"></script>
+		<link rel="stylesheet" href="__AMAZEUI_CSS__/amazeui.min.css" />
+		<link href="__CSS__/dlstyle.css" rel="stylesheet" type="text/css">
+		<script src="__AMAZEUI_JS__/jquery.min.js"></script>
+		<script src="__AMAZEUI_JS__/amazeui.min.js"></script>
 
 	</head>
 
 	<body>
-
 		<div class="login-boxtitle">
-			<a href="home/demo.html"><img alt="" src="images/logobig.png" /></a>
+			<a href="home/demo.html"><img alt="" src="__IMAGES__/logobig.png" /></a>
 		</div>
 
 		<div class="res-banner">
 			<div class="res-main">
-				<div class="login-banner-bg"><span></span><img src="images/big.jpg" /></div>
+				<div class="login-banner-bg"><span></span><img src="__IMAGES__/big.jpg" /></div>
 				<div class="login-box">
 
 						<div class="am-tabs" id="doc-my-tabs">
@@ -40,18 +38,25 @@
 										
 							   <div class="user-email">
 										<label for="email"><i class="am-icon-envelope-o"></i></label>
-										<input type="email" name="" id="email" placeholder="请输入邮箱账号">
-                 </div>										
-                 <div class="user-pass">
-								    <label for="password"><i class="am-icon-lock"></i></label>
-								    <input type="password" name="" id="password" placeholder="设置密码">
-                 </div>										
-                 <div class="user-pass">
-								    <label for="passwordRepeat"><i class="am-icon-lock"></i></label>
-								    <input type="password" name="" id="passwordRepeat" placeholder="确认密码">
-                 </div>	
-                 
-                 </form>
+										<input type="email" name="email" id="email" placeholder="请输入邮箱账号">
+			                 </div>	
+			                 			<div class="verification">
+											<label for="code"><i class="am-icon-code-fork"></i></label>
+											<input type="tel" name="code" id="code" placeholder="请输入验证码">
+											<a class="btn" href="javascript:void(0);" id="sendMobileCode">	
+												<span id="dyEmail">获取</span></a>
+										</div>									
+			                 <div class="user-pass">
+											    <label for="password"><i class="am-icon-lock"></i></label>
+											    <input type="password" name="password" id="password" placeholder="设置密码">
+			                 </div>										
+			                 <div class="user-pass">
+											    <label for="passwordRepeat"><i class="am-icon-lock"></i></label>
+											    <input type="password" name="repassword" id="passwordRepeat" placeholder="确认密码">
+			                 </div>	
+			                 
+			                 </form>
+			                 <span id="do_reg_1"></span>
                  
 								 <div class="login-links">
 										<label for="reader-me">
@@ -59,7 +64,7 @@
 										</label>
 							  	</div>
 										<div class="am-cf">
-											<input type="submit" name="" value="注册" class="am-btn am-btn-primary am-btn-sm am-fl">
+											<input type="submit" name="" id="reg_1" value="注册" class="am-btn am-btn-primary am-btn-sm am-fl">
 										</div>
 
 								</div>
@@ -68,30 +73,31 @@
 									<form method="post">
                  <div class="user-phone">
 								    <label for="phone"><i class="am-icon-mobile-phone am-icon-md"></i></label>
-								    <input type="tel" name="" id="phone" placeholder="请输入手机号">
+								    <input type="tel" name="phone" id="phone" placeholder="请输入手机号">
                  </div>																			
 										<div class="verification">
 											<label for="code"><i class="am-icon-code-fork"></i></label>
-											<input type="tel" name="" id="code" placeholder="请输入验证码">
-											<a class="btn" href="javascript:void(0);" onClick="sendMobileCode();" id="sendMobileCode">
+											<input type="tel" name="code_2" id="code_2" placeholder="请输入验证码">
+											<a class="btn" href="javascript:void(0);" id="sendMobileCode">
 												<span id="dyMobileButton">获取</span></a>
 										</div>
-                 <div class="user-pass">
-								    <label for="password"><i class="am-icon-lock"></i></label>
-								    <input type="password" name="" id="password" placeholder="设置密码">
-                 </div>										
-                 <div class="user-pass">
-								    <label for="passwordRepeat"><i class="am-icon-lock"></i></label>
-								    <input type="password" name="" id="passwordRepeat" placeholder="确认密码">
-                 </div>	
+						                 <div class="user-pass">
+														    <label for="password"><i class="am-icon-lock"></i></label>
+														    <input type="password" name="password_a" id="password" placeholder="设置密码">
+						                 </div>										
+						                 <div class="user-pass">
+														    <label for="passwordRepeat"><i class="am-icon-lock"></i></label>
+														    <input type="password" name="repassword_a" id="passwordRepeat" placeholder="确认密码">
+						                 </div>	
 									</form>
+									<span id="do_reg_2"></span>
 								 <div class="login-links">
 										<label for="reader-me">
-											<input id="reader-me" type="checkbox"> 点击表示您同意商城《服务协议》
+											<input id="reader-me_2" type="checkbox"> 点击表示您同意商城《服务协议》
 										</label>
 							  	</div>
 										<div class="am-cf">
-											<input type="submit" name="" value="注册" class="am-btn am-btn-primary am-btn-sm am-fl">
+											<input type="submit" name="" id="reg_2" value="注册" class="am-btn am-btn-primary am-btn-sm am-fl">
 										</div>
 								
 									<hr>
@@ -106,6 +112,7 @@
 							</div>
 						</div>
 
+								
 				</div>
 			</div>
 			
@@ -134,3 +141,68 @@
 	</body>
 
 </html>
+<script type="text/javascript">
+	var a = 1;
+	/*发送邮箱验证码*/
+	$('#dyEmail').click(function(){
+		var email = $('input[name=email]').val();
+		if (email) {
+			$.post("{:url('send')}",{email:email});
+		} else {
+			$('#do_reg_1').html(' &nbsp ' + ' &nbsp ' + ' * ' + ' &nbsp ' +'您未填写有效的邮箱').css('color','red');
+		}
+		
+
+	});
+	/*邮箱注册点击事件*/
+	$('#reg_1').click(function(){
+		var email = $('input[name=email]').val();
+		var password = $('input[name=password]').val();
+		var repassword = $('input[name=repassword]').val();	
+		var code = $('input[name=code]').val();
+		/*服务协议*/
+		if (!$('input[id=reader-me]').prop('checked')) {
+			$('#do_reg_1').html(' &nbsp ' + ' &nbsp ' + ' * ' + ' &nbsp ' +'请仔细阅读服务条款并点击同意').css('color','red');
+		}else {
+			$.post("{:url('doregister')}",{email:email,password:password,code:code,repassword:repassword},function(data){
+			
+				if (data == 1) {
+					$(location).attr('href','{:url("User/login")}');				
+				} else {
+					$('#do_reg_1').html(' &nbsp ' + ' &nbsp ' + ' * ' + ' &nbsp ' + data).css('color','red');
+				}
+			})
+		}	
+		
+		
+	});
+	/*发送手机验证码*/
+	$('#dyMobileButton').click(function(){	
+		var phone = $('input[name=phone]').val();
+		if (phone) {
+			$.post("{:url('phonemes')}",{phone:phone});
+		} else {
+			$('#do_reg_2').html(' &nbsp ' + ' &nbsp ' + ' * ' + ' &nbsp ' +'您未填写有效的手机号码').css('color','red');
+		}
+		
+	});
+	/*手机注册点击事件*/
+	$('#reg_2').click(function(){
+		var phone = $('input[name=phone]').val();	
+		var code = $('input[name=code_2]').val();
+		var password = $('input[name=password_a]').val();
+		var repassword = $('input[name=repassword_a]').val();
+		/*服务协议*/
+		if (!$('input[id=reader-me_2]').prop('checked')) {
+			$('#do_reg_2').html(' &nbsp ' + ' &nbsp ' + ' * ' + ' &nbsp ' +'请仔细阅读服务条款并点击同意').css('color','red');
+		}else {
+			$.post("{:url('doregister_2')}",{phone:phone,code:code,password:password,repassword:repassword},function(data){
+				if (data == 1) {
+					$(location).attr('href','{:url("User/login")}');				
+				} else {
+					$('#do_reg_2').html(' &nbsp ' + ' &nbsp ' + ' * ' + ' &nbsp ' + data).css('color','red');
+				}
+			})
+		}	
+	})
+</script>
